style/less/site.less
// main: build.less

*:focus {
	outline: none;
}

body {
	background: @base-color;
	color: @contrast-color;
	font-family: @font;
	font-weight: 300;
	.selection(@base-color, @vibrant-color);

	&.has-footer {
		section:last-of-type {
			margin-bottom: 382px;
		}
	}
}

header {
	position: fixed;
	z-index: 1;
	width: 100%;
	left: 0;
	top: 0;
	padding: @gutter / 2;
	font-size: 14px;
	pointer-events: none;

	ul {
		display: flex;
		margin-top: 2px;

		li {
			margin-left: 20px;
		}
	}

	.column {
		pointer-events: auto;
	}
}

footer {
	position: fixed;
	z-index: -1;
	bottom: 0;
	width: 100%;
	padding: @gutter;
}

h1, h2, dt {
	margin: 0;
	font-weight: 100;
	font-size: 35px;
}

p {
	margin: 50px 0 0 0;
	font-size: 18px;
	line-height: 1.8;

	&.no-margin {
		margin: 0;
	}
}

strong {
	font-size: 15px;
	font-weight: 700;
}

small {
	font-size: 12px;
	font-weight: 300;
}

article {
	margin-top: 00px;
}

nav {
	float: right;
}

ul {
	margin: 0;
	padding: 0;
	list-style-type: none;
}

dl {
	margin-top: 65px;
}

dt {
	margin-bottom: 15px;
}

dd {
	position: relative;
	margin-left: 0;
	padding-left: 25px;
	font-size: 18px;
	line-height: 1.8;

	&::before {
		content: '';
		position: absolute;
		left: 0;
		top: 2px;
		width: 16px;
		height: 100%;
		background: url('/picture/arrow.svg') no-repeat center center;
	}
}

a {
	color: @contrast-color;
	text-decoration: none;
}

svg {
	fill: currentColor;
}

section {
	position: relative;
	overflow: hidden;
	padding: @gutter * 1.5 @gutter;
	min-height: 100vh;

	&.white {
		z-index: 2;
	}
}

address {
	margin-top: 10px;
	font-style: normal;
}

form {
	margin-bottom: 30px;
	.transition(all 500ms ease);
}

textarea {
	display: block;
	width: 100%;
	min-width: 100%;
	height: 22vh;
	font-size: 35px;
	font-weight: 100;
	color: @bright-color;
	background: none;
	line-height: 1.4;
	border: none;
	border-bottom: 1px solid lighten(@bright-color, 50%);
	resize: none;
	.border-radius(0);
	.transition(all 500ms ease);

	&:focus {
		color: @base-color;
		border-bottom: 1px solid @base-color;
	}

	&:disabled {
		overflow: hidden;
		background: none;
		cursor: default;
	}
}

.black {
	background: @base-color;
	color: @contrast-color;
}

.white {
	background: @contrast-color;
	color: @base-color;

	a {
		color: currentColor;
	}

	.lang {
		li {
			&:last-child::before {
				color: @base-color;
			}

			&.active a {
				color: @base-color;
			}
		}

		a {
			color: lighten(@bright-color, 30%);
		}
	}

	.media {
		a {
			&::after, &::before {
				background: lighten(@bright-color, 20%);
			}
		}
	}
}

.logo {
	width: 150px;
	height: 20px;
}

.the-studio-intro {
	h1, p {
		margin-top: calc(~'35vh - ' @gutter * 1.5);
	}
}

.lang {
	li {
		position: relative;

		&:last-child::before {
			content: '/';
			position: absolute;
			left: -12px;
			color: @contrast-color;
		}

		&.active a {
			color: @contrast-color;
		}
	}

	a {
		color: @bright-color;
	}
}

.media {
	position: fixed;
	z-index: 1;
	left: 0;
	top: 50vh;
	width: @gutter;
	text-align: center;
	.transform(translate(0, -50%));

	svg {
		width: 15px;
		height: 15px;
		.transition(transform 1s @cubic, fill 800ms ease;);
	}

	a {
		display: block;
		position: relative;
		padding: 4px 0px;

		&::after, &::before {
			content: '';
			position: absolute;
			top: 50%;
			left: 0;
			width: 0px;
			height: 1px;
			background: @contrast-color;
			will-change: width;
			.transition(width 1.1s @cubic);
		}

		&::after {
			.transition(width 500ms @cubic);
		}

		&:hover, &:focus {
			&::after, &::before {
				width: 40px;
			}

			&::after {
				background: @vibrant-color;
				.transition(width 1s 200ms @cubic);
			}

			svg {
				fill: @vibrant-color;
				.transform(translateX(10px));
			}
		}
	}
}

.underline {
	position: relative;
	z-index: 0;

	&::before {
		content: '';
		position: absolute;
		z-index: -1;
		left: 0;
		bottom: 0;
		width: 100%;
		height: 0;
		background: fade(@vibrant-color, 50%);
		will-change: height;
		.transition(height 400ms ease);
	}

	&:hover, &:focus {
		&::before {
			height: 30%;
		}
	}
}

.button {
	display: inline-flex;
	align-items: center;
	font-weight: 100;
	font-size: 18px;
	cursor: pointer;

	svg {
		width: 14px;
		height: 14px;
		stroke: currentColor;
		margin-right: 10px;
		.transition(transform 500ms 150ms @cubic);
	}

	&:hover {
		svg {
			.transform(translateX(4px));
		}
	}

	&.big {
		font-size: 35px;
	}
}

.slider {
	position: fixed;
	top: 0;
	right: 0;
	height: 100%;

	div {
		position: absolute;
		top: 50%;
		height: 50%;
		max-width: 55%;
	}

	h1 {
		margin-top: 70px;
	}

	.button {
		position: absolute;
		bottom: 20%;
	}
}

.motio-o-home {
	height: 100vh;
	width: 100vh;
	stroke: @vibrant-color;
}

.motio-o-contact {
	position: fixed;
	right: 0;
	top: -40vh;
	width: 80vh;
	height: 80vh;
	z-index: -1;
	stroke: @vibrant-color;
	.transform(rotate(90deg));
}

.motio-vertical {
	position: absolute;
	z-index: 3;
	width: 353px;
	height: 1252px;
	left: 16%;
	top: calc(~'100vh - 122px');
	pointer-events: none;
}

.clone {
	position: absolute;
}

.post {
	height: 27px;
	margin-top: 20px;
	visibility: visible;
	opacity: 1;
}

.message {
	position: absolute;
	display: block;
	visibility: hidden;
	opacity: 0;
}

.warning {
	color: @warning-color;
}

.state {
	.post {
		visibility: hidden;
		opacity: 0;
		.transform(translateY(-10px));
	}

	.message {
		.transform(translateY(-25px));
	}

	&.nomail .missing-mail, &.pending .pending-request, &.undelivered .bad-request, &.delivered .message-sent {
		visibility: visible;
		opacity: 1;
	}

	&.pending {
		.progress {
			.animation(pending-progress 4s 500ms @cubic forwards);
		}
	}

	&.undelivered {
		.progress {
			.animation(undelivered-progress 1s @cubic forwards);
		}
	}

	&.delivered {
		.progress {
			.animation(delivered-progress 1s @cubic forwards);
		}
	}
}

.post, .message {
	.transition(transform 400ms ease, opacity 400ms ease, visibility 400ms ease;);
}

.progress {
	display: block;
	width: 0;
	height: 1px;
	margin-top: -1px;
	background: @base-color;
}

.emoji {
	display: block;
	float: right;
	font-size: 30px;
	line-height: 0.7;
	margin-left: 10px;
}

